Can build from any aqueduct square

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <h1>Aqueduct Builder</h1>
 <div class="canvas">
 <canvas id="canvas" width="1200" height="600"></canvas>
+<div class="status">
+Pieces remaining: <span id="supply">0</span>
 </div>
 <div class="loglabel"></div>
 <div id="log">
