--- a/index.html
+++ b/index.html
@@ -16,5 +16,8 @@ Pieces remaining: <span id="supply">0</span>
 <div class="loglabel"></div>
 <div id="log">
 </div>
+<audio src="Blood Begets Blood.mp3" autoplay="autoplay" loop="loop">
+Your browser does not support the audio element.
+</audio>
 </body>
 </html>
