added mute button and changed the way the music works. Currently the mute button does not toggle properly. Unsure why.

--- a/index.html
+++ b/index.html
@@ -16,8 +16,6 @@ Pieces remaining: <span id="supply">0</span>
 <div class="loglabel"></div>
 <div id="log">
 </div>
-<audio src="Blood Begets Blood.mp3" autoplay="autoplay" loop="loop">
-Your browser does not support the audio element.
-</audio>
+<input type="button" id="mute" onclick="mute()" value="Toggle Mute" />
 </body>
 </html>
