fixed mute button to make it work properly

--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@ Pieces remaining: <span id="supply">0</span>
 <div class="loglabel"></div>
 <div id="log">
 </div>
-<input type="button" id="mute" onclick="mute()" value="Toggle Mute" />
+<input type="button" id="mute" onclick="toggle_mute()" value="Toggle Mute" />
 </body>
 </html>
