While working on mute code, updated jquery. Now current version should be copied to jquery.min.js

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 <title>Aqueduct Builder</title>
 <link rel="stylesheet" type="text/css" href="style.css" />
-<script type="text/javascript" src="jquery-1.5.min.js"></script>
+<script type="text/javascript" src="jquery.min.js"></script>
 <script type="text/javascript" src="canvas-game.js"></script>
 <script type="text/javascript" src="game.js"></script>
 </head>
@@ -16,6 +16,6 @@ Pieces remaining: <span id="supply">0</span>
 <div class="loglabel"></div>
 <div id="log">
 </div>
-<input type="button" id="mute" onclick="toggle_mute()" value="Toggle Mute">
+<input type="button" id="mute" onclick="toggle_mute()" value="Mute" />
 </body>
 </html>
