--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <html>
 <head>
-<title>Aqueduct Builder</title>
+<title>Aqueduct Architect</title>
 <link rel="stylesheet" type="text/css" href="style.css" />
 <script type="text/javascript" src="jquery.min.js"></script>
 <script type="text/javascript" src="canvas-game.js"></script>
 <script type="text/javascript" src="game.js"></script>
 </head>
 <body>
-<h1>Aqueduct Builder</h1>
+<h1>Aqueduct Architect</h1>
 <div class="canvas">
 <canvas id="canvas" width="1200" height="600"></canvas>
 <div class="status">
