Updated to include educational information before play

--- a/index.html
+++ b/index.html
@@ -1,21 +1,12 @@
-<html>
-<head>
-<title>Aqueduct Builder</title>
-<link rel="stylesheet" type="text/css" href="style.css" />
-<script type="text/javascript" src="jquery.min.js"></script>
-<script type="text/javascript" src="canvas-game.js"></script>
-<script type="text/javascript" src="game.js"></script>
-</head>
-<body>
-<h1>Aqueduct Builder</h1>
-<div class="canvas">
-<canvas id="canvas" width="1200" height="600"></canvas>
-<div class="status">
-Pieces remaining: <span id="supply">0</span>
-</div>
-<div class="loglabel"></div>
-<div id="log">
-</div>
-<input type="button" id="mute" onclick="toggle_mute()" value="Mute" />
-</body>
+<!DOCTYPE html>
+	  <head>
+		<link rel="stylesheet" type="text/css" href="style.css" />
+	</head>
+	<body>
+		<h1>Aqueduct Builder</h1>
+		<p>The ancient Roman civilization was the first to use channels to direct water from natural sources to reservoirs and on to where the water was needed. These above-ground channels, called aqueducts, were made of stone and concrete. The first aqueduct was built in 312 BCE to bring water to the rapidly expanding city of Rome. As the Romans grew their empire, they brought the technology of Aqueducts across Europe.</p>
+		<form action="game.html">
+			<input type="submit" value="play" id="play"/>
+		</form>
+	</body>
 </html>
