Added basic instructions to the index page and tweaked the styling

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<body>
 		<h1>Aqueduct Builder</h1>
 		<p>The ancient Roman civilization was the first to use channels to direct water from natural sources to reservoirs and on to where the water was needed. These above-ground channels, called aqueducts, were made of stone and concrete. The first aqueduct was built in 312 BCE to bring water to the rapidly expanding city of Rome. As the Romans grew their empire, they brought the technology of Aqueducts across Europe.</p>
+        <p>The goal in Aqueduct Builder is to successfully build an aqueduct that goes from the water source to the city. There may be obstacles in the way, and you may not have enough resources to get there. Try stopping at the small villages. If you supply them with water, they will give you some resources.</p>
 		<form action="game.html">
 			<input type="submit" value="play" id="play"/>
 		</form>
